<resources>
    <string name="app_name">Supatem</string>
    <string name="main_supafree">수파프리</string>
    <string name="main_supadeal">수파딜</string>
    <string name="main_quest">퀘스트</string>
    <string name="main_event">이벤트</string>
    <string name="main_mypage">내페이지</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>
    <string name="loading_message">loading</string>
    <string name="error_title">Oops!</string>
    <string name="error_message">An error occurred loading the resource.\nPlease try again later.</string>
    <string name="empty_title">Weird…</string>
    <string name="empty_message">There doesn\'t seem to be\nanything trending in this timespan.</string>

    <!-- Tutorial -->
    <string name="tutorial_1_title">그동안 놓쳐왔던\n새로운 이야기들이 매일매일 추가됩니다.</string>
    <string name="tutorial_2_title">다양한 적립 방법을 누리세요.</string>
    <string name="tutorial_3_title">티끌 모아 티끌은 그만\n포인트를 늘려주는\n수파박스를 체험하세요.</string>
    <string name="tutorial_4_title">현금처럼 쓰는 리워드 포인트</string>

    <string name="tutorial_1_desc"><![CDATA[<font color=red>상하좌우</font><font color=black>밀어넘기는 스와이프 동작으로<br>매거진 속 리워드 캐시를 찾아보세요.</font>]]></string>
    <string name="tutorial_2_desc"><![CDATA[<font color=black>추천 어플리케이션을 다운 받고</font><br><font color=red>리워드</font><font color=black>를 모을 수 있어요.</font>]]></string>
    <string name="tutorial_3_desc"><![CDATA[<font color=black>모은 리워드 포인트를</font><br><font color=red>수파박스</font><font color=black>에 담아<br>최대 </font><font color=red>100배</font><font color=black>의 기회를!!</font>]]></string>
    <string name="tutorial_4_desc"><![CDATA[<font color=red>현금환급, 기프티콘, 응원하기</font><br><font color=black>쓰고 싶은 곳에서 현금처럼 써보세요.</font>]]></string>

    <!-- Splash-->
    <string name="update_title">업데이트가 필요합니다.</string>
    <string name="update_msg">서비스 이용을 위해서는 업데이트가 필요합니다. 새로운 버전의 수파템을 다운로드 받으세요.</string>
    <string name="update">업데이트하기</string>
    <string name="next">다음에하기</string>

    <!-- Main-->
    <string name="dialog_login_title">로그인이 필요합니다.</string>
    <string name="dialog_login_msg">로그인이 필요한 기능입니다. 지금 로그인하고 수파템의 다양한 혜택을 누리세요.</string>
    <string name="dialog_login_ok">로그인 또는 회원가입하기</string>

    <!--Login-->
    <string name="label_login">로그인</string>
    <string name="login_naver">네이버 아이디로 로그인하기</string>
    <string name="login_kakao">카카오톡계정으로 로그인하기</string>
    <string name="join">회원가입</string>

    <string name="company">© MOFFCOMM</string>
</resources>
