<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_supafree"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/main_supafree"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_supadeal"
        android:enabled="true"
        android:icon="@drawable/ic_access_time_white_24dp"
        android:title="@string/main_supadeal"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_quest"
        android:enabled="true"
        android:icon="@drawable/ic_audiotrack_white_24dp"
        android:title="@string/main_quest"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_event"
        android:enabled="true"
        android:icon="@drawable/ic_access_time_white_24dp"
        android:title="@string/main_event"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_mypage"
        android:enabled="true"
        android:icon="@drawable/ic_audiotrack_white_24dp"
        android:title="@string/main_mypage"
        app:showAsAction="ifRoom" />
</menu>