<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_or_join"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.moffcomm.supatem.ui.login_join.LoginJoinActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="40dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            app:srcCompat="@drawable/login_logo" />

        <Button
            android:id="@+id/naverButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_margin="20dp"
            android:background="#2db400"
            android:drawableLeft="@drawable/icon_naver"
            android:paddingLeft="18dp"
            android:text="@string/login_naver"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/kakaoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/naverButton"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#fbe600"
            android:drawableLeft="@drawable/icon_kakao"
            android:paddingLeft="18dp"
            android:text="@string/login_kakao"
            android:textColor="#340302"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/bottomImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/kakaoButton"
            android:scaleType="centerCrop"
            android:src="@drawable/img_bg_logoin" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/bottomImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-20dp"
            app:srcCompat="@drawable/img_or" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="27dp"
            android:text="@string/join"
            android:textColor="#153f7c"
            android:textSize="17sp"
            android:textStyle="bold" />

    </RelativeLayout>


</LinearLayout>
